[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/menu-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/images/buttons/start.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/start_touch-hover.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/credits.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/credits_touch-hover.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buttons/exit.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buttons/exit_touch-hover.png" type="Texture" id=8]
[ext_resource path="res://assets/images/buttons/stats_button.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/Candal.fnt" type="Font" id=10]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 180, 319 )
texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="StartButton" type="TextureButton" parent="."]

margin/left = 82.0
margin/top = 210.0
margin/right = 283.0
margin/bottom = 346.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/scale = Vector2( 0.8, 0.8 )

[node name="CreditsButton" type="TextureButton" parent="."]

margin/left = 62.0
margin/top = 351.0
margin/right = 297.2
margin/bottom = 485.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/scale = Vector2( 0.8, 0.8 )

[node name="ExitButton" type="TextureButton" parent="."]

margin/left = 85.0
margin/top = 497.0
margin/right = 279.4
margin/bottom = 623.4
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/scale = Vector2( 0.8, 0.8 )

[node name="StatsButton" type="TextureButton" parent="."]

margin/left = 297.0
margin/top = 12.0
margin/right = 347.0
margin/bottom = 62.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 9 )
params/scale = Vector2( 0.5, 0.5 )

[node name="logo" type="Label" parent="."]

margin/left = 2.0
margin/top = -3.0
margin/right = 92.0
margin/bottom = 59.0
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.778809, 0.781956, 0.859375, 1 )
text = "FM"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="StatsButton" to="." method="_on_StatsButton_pressed"]


